--- a/client/src/components/handlers/AlertHandler/AlertHandler.module.scss
+++ b/client/src/components/handlers/AlertHandler/AlertHandler.module.scss
@@ -1,4 +1,4 @@
-@import '@/styles/variables';
+@use "@/styles/variables" as v;
 
 .container {
     position: fixed;
@@ -8,6 +8,6 @@
 
     display: flex;
     flex-direction: column;
-    gap: $base-gap;
+    gap: v.$base-gap;
     z-index: 5;
 }
