--- a/client/src/components/utilities/InputWrapper/InputWrapper.module.scss
+++ b/client/src/components/utilities/InputWrapper/InputWrapper.module.scss
@@ -1,7 +1,7 @@
-@import 'src/styles/variables.scss';
+@use "@/styles/variables" as v;
 
 .container {
-  padding: $symmetrical-padding;
+  padding: v.$symmetrical-padding;
   &:first-child {
     white-space: pre-wrap;
   }
