feat(client): add max and min values to number input style: add symmetrical prop to Button style: add prop to disable pointer in HeaderExtendContainer feat(client): prop to disable click to expand and collapse in HeaderExtendContainer fix(client): when deleting one group they all delete style: change small chip padding style: change symmetrical button padding feat(server): update groupSchema

--- a/client/src/components/buttons/Button/Button.module.scss
+++ b/client/src/components/buttons/Button/Button.module.scss
@@ -29,6 +29,10 @@
         width: 100%;
     }
 
+    &.symmetrical {
+        padding: 11px;
+    }
+
     &:disabled {
         opacity: v.$opacity-low;
         cursor: not-allowed;
