style: make dropdown input font size smaller style: make DropDownInput global style feat(client): add setting to change delete group action feat(server): remove confirmDeleteTask setting refactor(server): confirmDeleteGroup -> confirmDelete

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -145,6 +145,16 @@ a {
     opacity: v.$opacity-low;
 }
 
+.DropDownOption {
+    font-size: inherit;
+    width: 100%;
+    height: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    text-align: left;
+}
+
 .Title {
     font-size: v.$font-xxl;
     font-weight: 500;
