--- a/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
+++ b/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
@@ -51,7 +51,7 @@
 
 .option {
     position: relative;
-    font-size: v.$font-l;
+    font-size: v.$font-s;
     line-height: 1.5em;
     cursor: pointer;
     white-space: nowrap;
