feat(client): mark proper dates on new entry date picker

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -155,6 +155,10 @@ a {
     text-align: left;
 }
 
+.DayPicker-Day--13 {
+    background-color: red !important;
+}
+
 .Title {
     font-size: v.$font-xxl;
     font-weight: 500;
