style: change category indicator max width style: add underline to proper date in task view table

--- a/client/src/pages/TaskView/Taskview.module.scss
+++ b/client/src/pages/TaskView/Taskview.module.scss
@@ -51,6 +51,6 @@ $base-size: 1.2em;
   height: auto;
 }
 
-.properDays {
-  background-color: red;
+.isProperDate {
+  text-decoration: underline;
 }
