--- a/client/src/components/indicators/CategoryIndicator/CategoryIndicator.module.scss
+++ b/client/src/components/indicators/CategoryIndicator/CategoryIndicator.module.scss
@@ -6,8 +6,8 @@
   padding: 4px 7px;
   font-size: v.$font-s;
   align-items: center;
-  max-width: 12.5em;
-  width: fit-content;
+  max-width: 100%;
+  width: min-content;
 }
 
 .text {
