feat(client): add context menu to number current progress for changing feat(client): start work on TimePeriodInput modal feat(client): add onContextMenu prop

--- a/client/src/components/utilities/TimePeriodInputModal/TimePeriodInput.module.scss
+++ b/client/src/components/utilities/TimePeriodInputModal/TimePeriodInput.module.scss
@@ -1,3 +1,5 @@
+@use "@/styles/variables" as v;
+
 .calendarRoot {
   --rdp-cell-size: 40px;
   background-color: var(--surface-color);
@@ -31,5 +33,18 @@
   &:hover {
     background-color: var(--primary-color) !important;
     opacity: 0.75;
+  }
+}
+
+.button {
+  width: 2em;
+  height: 2em;
+  border-radius: v.$button-border-radius;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+
+  &.selected {
+    color: var(--on-primary-color);
+    background-color: var(--primary-color);
   }
 }
