--- a/client/src/components/indicators/CurrentProgress/CurrentProgress.module.scss
+++ b/client/src/components/indicators/CurrentProgress/CurrentProgress.module.scss
@@ -1,3 +1,6 @@
+@use "@/styles/index";
+@use "@/styles/variables" as v;
+
 .container {
     width: 2.6em;
     height: 2.6em;
@@ -37,4 +40,47 @@ circle {
     fill: transparent;
     transform: rotate(180deg);
     transform-origin: center;
+}
+
+.overlayContainer {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    background-color: transparent;
+    transform-origin: center center;
+}
+
+.overlay {
+    @extend .Stack-Container;
+    width: 2.2em;
+    height: 5em;
+    padding: 0.5em 0.125em;
+    border-radius: 2.2em;
+    background-color: var(--primary-color);
+    color: var(--on-primary-color);
+    position: fixed;
+    top: 0;
+    left: 0;
+    align-items: center;
+    overflow-y: hidden;
+    gap: 0;
+    font-size: v.$font-xl;
+
+    & > * {
+        overflow-y: hidden;
+        text-align: center;
+        height: 2em;
+        line-height: 2em;
+    }
+
+    & :first-child {
+        font-size: 75%;
+    }
+
+    & :last-child {
+        font-size: 75%;
+    }
 }
