feat(client): adjust size per step value in CurrentProgress fix(client): fix animations for CurrentProgress overlay feat(client): add max value to step (999) feat(server): add max value to step (999) fix(client): button has arial font

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -382,6 +382,8 @@ button {
     border: none;
     cursor: pointer;
     color: inherit;
+    font-family: 'Roboto', sans-serif;
+    padding: 0;
 }
 
 
