--- a/client/src/components/indicators/CurrentProgress/CurrentProgress.module.scss
+++ b/client/src/components/indicators/CurrentProgress/CurrentProgress.module.scss
@@ -11,6 +11,7 @@
     justify-content: center;
     align-items: center;
     background-color: var(--surface-color);
+    flex-shrink: 0;
 }
 
 .outlineContainer {
@@ -54,33 +55,36 @@ circle {
 }
 
 .overlay {
-    @extend .Stack-Container;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.2em;
     width: 2.2em;
-    height: 5em;
-    padding: 0.5em 0.125em;
+    position: fixed;
+    overflow: visible;
+}
+
+.overlayContent {
+    @extend .Stack-Container;
+
     border-radius: 2.2em;
+    flex-shrink: 0;
+
     background-color: var(--primary-color);
     color: var(--on-primary-color);
-    position: fixed;
-    top: 0;
-    left: 0;
+    box-shadow: v.$elevation-1;
+
     align-items: center;
+    justify-content: space-around;
     overflow-y: hidden;
-    gap: 0;
+    gap: 10px;
     font-size: v.$font-xl;
+    max-font-size: v.$font-xl;
 
     & > * {
         overflow-y: hidden;
         text-align: center;
-        height: 2em;
-        line-height: 2em;
-    }
-
-    & :first-child {
-        font-size: 75%;
-    }
-
-    & :last-child {
-        font-size: 75%;
+        height: 1.5em;
+        line-height: 1.5em;
     }
 }
