fix(client): can't add new repeat task feat(client): add number task indicators feat(client): add long goal task indicators feat(server): remove min length requirement for smallTimePeriod and startingDate at task feat(server): change task longest streak default number to 0

--- a/client/src/components/indicators/Task/Task.module.scss
+++ b/client/src/components/indicators/Task/Task.module.scss
@@ -71,11 +71,7 @@
   }
 
   width: 100%;
-  display: grid;
-  grid-template-columns: 15% 15%;
-  grid-template-rows: repeat(auto-fill, auto);
-  grid-row-gap: 0;
-  grid-column-gap: 0.5em;
+  gap: 0.5em;
 
   & > div {
     text-overflow: ellipsis;
@@ -84,5 +80,12 @@
     display: inline-flex;
     align-items: center;
     gap: 0.5em;
+    width: 14%;
+
+    &.repeatSeparator {
+      text-align: center;
+      width: auto;
+    }
   }
 }
+
