feat(client): make hover and tap animations css instead of framer motion for Button and Chip style: add active animation to Button style: add active animation to Chip style: add active animation to Dropdown style: update hover animation of Dropdown style: Add Flex-Wrap and Big-Gap subclasses to Horizontal-Flex-Container fix(client): add color changing to currentProgress for when completed style: finalize settings styling

--- a/client/src/components/buttons/Button/Button.module.scss
+++ b/client/src/components/buttons/Button/Button.module.scss
@@ -4,6 +4,7 @@
     border-radius: v.$button-border-radius;
     background-color: var(--primary-color);
     color: var(--on-primary-color);
+    transition: 0.2s box-shadow, 0.2s transform;
     font-size: v.$font-l;
 
     &.square {
@@ -44,6 +45,11 @@
     }
 
     &:hover:not(.disabled) {
+        transform: translateY(-1px);
         box-shadow: v.$elevation-1;
+    }
+
+    &:active:not(.disabled) {
+        transform: translateY(1px);
     }
 }
