--- a/client/src/pages/Settings/Settings.module.scss
+++ b/client/src/pages/Settings/Settings.module.scss
@@ -15,8 +15,8 @@
     .container {
         width: 600px;
         height: calc(100% - 4em);
-        padding-left: 20px !important;
-        padding-right: 22px !important;
+        padding: 20px !important;
+        padding-right: 12px !important;
     }
 }
 
