--- a/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
+++ b/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
@@ -38,6 +38,17 @@
     transform-origin: center center;
 }
 
+.optionsOverlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    background-color: transparent;
+    transform-origin: center center;
+}
+
 .optionsContainer {
     box-sizing: border-box;
     position: absolute;
