--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -306,6 +306,7 @@ input {
     border: none;
     background: none;
     color: var(--primary-color);
+    font-family: 'Roboto', sans-serif;
 
     &:focus {
         outline: none;
